# next-chart

./: .gitignore  LICENSE  README.md
.github/workflows/: build.yml
app/: README.md  index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.tsx  main.tsx  state.tsx  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
app/src/components/: FormRenderer.tsx  Layout.tsx  PrintDoc.tsx  UpdatePanel.tsx
app/src/forms/: femaleCycle.ts  femaleInitial.ts  femaleResult.ts  index.ts  maleCycle.ts  maleInitial.ts  schema.ts
app/src/lib/: audit.ts  auth.ts  backup.ts  crypto.ts  format.ts  idb.ts  pdf.ts  repo.ts  session.ts  settings.ts  types.ts  updater.ts
app/src/pages/: AuditLogPage.tsx  BackupPage.tsx  ChartEditor.tsx  CoupleView.tsx  Dashboard.tsx  Login.tsx  PatientDetail.tsx  Patients.tsx  PrintView.tsx  Setup.tsx  UsersPage.tsx
app/tests/: couple.mjs  e2e.mjs  tamper.mjs
resources/CPG/: cpg_recommendations_merged.xlsx
resources/난임/: 진료기록관리_보조SW_개발계획서.md
resources/보험한약/: preparations.json  prescriptions.json  「한약제제 급여목록 및 상한금액표」 고시 일부개정 별표_제2026-124호.xlsx
