[package]
name = "next-chart"
version = "0.1.2"
description = "NextChart 전자차트 (전자서명 미지원·출력 관리형)"
authors = ["NextChart"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "next_chart_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
